--- a/src/tokens/scss/components/_card.scss
+++ b/src/tokens/scss/components/_card.scss
@@ -2,7 +2,7 @@
 // Do not edit directly, this file was auto-generated.
 
 $card-padding-inline: 1rem; // Padding horizontal
-$card-padding-block-start: 2rem; // Padding block start
+$card-padding-block-start: 1rem; // Padding block start
 $card-padding-block-end: 0.75rem; // Padding block end
 $card-gap: 0.75rem; // Separación entre elementos internos
 $card-description-font-size: 1.25rem; // Tamaño de fuente de la descripción
